# wordic

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: application.rs  main.rs
src/application/: dictionary_application_service.rs
src/domain/: dictionary.rs
src/functions/: display.rs
src/infrastructure/: repository.rs
