[package]
name = "wordic"
version = "0.1.2"
edition = "2021"
authors= ["yujikawa"]
description = "This is command line tool to manage word dictionary."
license = "Apache-2.0"
exclude = [".github"]
repository = "https://github.com/yujikawa/wordic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0"
